[package]
name = "rscp"
version = "0.1.2"
authors = ["Sven Fabricius <sven.fabricius@livediesel.de>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mr-sven/rscp"
description = "Rust implementation of E3DC RSCP"
categories = ["network-programming"]
keywords = ["e3dc", "energy_storage"]

[lib]
name = "rscp"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"

# logging
log = "0.4.17"

# used in tags for enum extensions
macro-attr = "0.2.0"

# rscp stuff
simple-rijndael = "0.3.2"
chrono = "0.4"
crc = "3.0"
